--- a/ManagementSystem/ManagementSystem.Web/ManagementSystem.Web.csproj
+++ b/ManagementSystem/ManagementSystem.Web/ManagementSystem.Web.csproj
@@ -13,4 +13,9 @@
     <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.0" />
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Pages\HumanResource\" />
+    <Folder Include="Pages\Finance\" />
+    <Folder Include="Pages\Product\" />
+  </ItemGroup>
 </Project>
