--- a/ManagementSystem/ManagementSystem.Web/ManagementSystem.Web.csproj
+++ b/ManagementSystem/ManagementSystem.Web/ManagementSystem.Web.csproj
@@ -14,6 +14,7 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Data\Migrations\" />
     <Folder Include="Pages\HumanResource\" />
     <Folder Include="Pages\Finance\" />
     <Folder Include="Pages\Product\" />
