Added product main and add pages

--- a/ManagementSystem/ManagementSystem.Web/ManagementSystem.Web.csproj
+++ b/ManagementSystem/ManagementSystem.Web/ManagementSystem.Web.csproj
@@ -21,5 +21,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Pages\Finance\" />
+    <Folder Include="Pages\Product\Build\" />
+    <Folder Include="Pages\Product\Report\" />
+    <Folder Include="Pages\Product\Team\" />
   </ItemGroup>
 </Project>
