Added build and report pages

--- a/ManagementSystem/ManagementSystem.Web/appsettings.json
+++ b/ManagementSystem/ManagementSystem.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ManagementSystem-PR-6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\LAM;Database=ManagementSystem-2;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
